feat: Adds alarm APIs
