# pkg/docs/swagger.json
@@ -2983,6 +2983,20 @@
                 }
             }
         },
+        "api.Alarms": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "integer"
+                },
+                "policy": {
+                    "$ref": "#/definitions/types.FullPolicy"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "api.AllResource": {
             "type": "object",
             "properties": {
@@ -3669,6 +3683,12 @@
         "api.GetFindingDetailsResponse": {
             "type": "object",
             "properties": {
+                "alarms": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.Alarms"
+                    }
+                },
                 "connection": {
                     "$ref": "#/definitions/types.FullConnection"
                 },
